[gd_scene load_steps=4 format=3]

[ext_resource type="Script" path="res://scripts/planet/monitors/AtmosphereEntryExitMonitor.gd" id="1_v178b"]

[sub_resource type="SphereShape3D" id="SphereShape3D_aho8t"]
radius = 210.0

[sub_resource type="SphereShape3D" id="SphereShape3D_cj57e"]
radius = 290.0

[node name="AtmosphereEntryExitMonitor" type="Node3D"]
script = ExtResource("1_v178b")

[node name="AtmosphereInner" type="Area3D" parent="."]

[node name="AtmosphereInnerCollider" type="CollisionShape3D" parent="AtmosphereInner"]
shape = SubResource("SphereShape3D_aho8t")

[node name="AtmosphereOuter" type="Area3D" parent="."]

[node name="AtmosphereOuterCollider" type="CollisionShape3D" parent="AtmosphereOuter"]
shape = SubResource("SphereShape3D_cj57e")
